# WinnCore-ML-Detector

./: .gitignore  LICENSE  README.md  TRAINING_RESULTS.md  extract_features.py  extract_lotl_features.py  features.csv  generate_benign_scripts.py  generate_lotl_samples.py  lotl_features.csv  train_model.py  train_v3_hardened.sh
data/benign-scripts/: automation_45.sh  automation_91.sh  automation_97.sh  backup.sh  backup_28.sh  backup_30.sh  backup_99.sh  cleanup.sh  deployment_60.sh  deployment_78.sh  deployment_8.sh  logging_16.sh  logging_74.sh  maintenance_5.sh  maintenance_76.sh  maintenance_98.sh  monitoring_23.sh  monitoring_29.sh  monitoring_32.sh  reporting_14.sh  update.sh
docs/: FEATURES.md  INTEGRATION.md
eval/: .gitkeep  report_v0.md  report_v1.md  report_v2_advanced.md  report_v3_hardened.md
extractor/: Cargo.toml
extractor/src/: main.rs
models/: .gitkeep  gbm_v3_hardened.txt
synthetic-malware/: generate_1000_samples.sh  generate_advanced_samples.sh  generate_level3_evasive.sh
synthetic-malware/lotl-attacks/: cred_dump_20.sh  cred_dump_45.sh  cred_dump_71.sh  cred_dump_86.sh  data_exfil_32.sh  data_exfil_67.sh  data_exfil_70.sh  data_exfil_85.sh  discovery_21.sh  discovery_6.sh  lateral_10.sh  lateral_5.sh  obfuscated_37.sh  obfuscated_38.sh  obfuscated_69.sh  persistence_3.sh  persistence_92.sh  persistence_97.sh  privesc_22.sh  privesc_74.sh  privesc_99.sh  reverse_shell_30.sh  reverse_shell_38.sh  (+3 more)
training/: requirements.txt  requirements_minimal.txt  requirements_train_only.txt  train_lightgbm.py  train_lightgbm_no_plots.py
